Menambahkan exception handler buat resource not found dan bad request